--- a/src/css/modules/header.css
+++ b/src/css/modules/header.css
@@ -3,13 +3,13 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 8.25rem;
+    height: 6.25rem;
     padding: 1rem 0;
     background-color: var(--blue-dark);
     color: var(--white);
     z-index: 3;
     @media (--lg) {
-        height: 16rem;
+        height: 11rem;
         padding: 2.125rem 0;
         border-top: 3rem solid var(--white);
     }
@@ -45,6 +45,16 @@
     @nest .scrolling-up & {
         transform: translate3d(0, 100%, 0);
         box-shadow: var(--box-shadow);
+        @media (--lg) {
+            height: auto;
+            padding: 0;
+            border-top: 0;
+        }
+    }
+    @nest .scrolling-down & .canvas & {
+        @media (--lg) {
+            top: -11.5625rem;
+        }
     }
 }
 
@@ -67,7 +77,7 @@
     border: 0;
     width: 10rem;
     @media (--lg) {
-        width: 14rem;
+        width: 17rem;
         margin-left: 5%;
     }
     @nest .header--collapsed & {
@@ -90,6 +100,7 @@
 
 .header__logo__large {
     display: block;
+    width: 17rem;
     @nest .header--collapsed & {
         display: none;
     }
@@ -203,7 +214,7 @@
         top: -5.125rem;
         right: 2rem;
         margin: 0;
-        padding: 2rem 3rem 2rem 0;
+        padding: 1rem 3rem 1rem 0;
         background-color: var(--blue);
         color: var(--white);
     }
@@ -321,7 +332,7 @@
         justify-content: space-between;
         position: absolute;
         right: 0;
-        bottom: 1rem;
+        bottom: 0rem;
         width: calc((100% - 4rem) * 0.65 + 2rem);
     }
     @nest .header--collapsed & {
