--- a/src/css/modules/page-title.css
+++ b/src/css/modules/page-title.css
@@ -6,7 +6,7 @@
         margin-top: -2rem;
     }
     @media (--lg) {
-        margin-top: 0;
+        margin-top: -5rem;
     }
     &::before {
         content: '';
