--- a/src/css/modules/slider.css
+++ b/src/css/modules/slider.css
@@ -13,11 +13,11 @@
 }
 
 .slider--margin {
-  margin: 6rem 0;
+  margin: 3rem 0;
 }
 
 .slider__items {
-  margin: 4rem -2rem;
+  margin: 1rem -2rem;
 
   @media (--md) {
     @mixin container;
@@ -33,7 +33,7 @@
     background-color: var(--white);
 
     @nest .flickity-resize& {
-      min-height: 100%;
+      max-height: 100%;
     }
   }
 
@@ -51,6 +51,7 @@
   & .flickity-viewport {
     position: relative;
     height: 100%;
+    max-height: 350px;
   }
 
   & .flickity-slider {
