Add calc() back to mixin

--- a/src/css/util/mixins.css
+++ b/src/css/util/mixins.css
@@ -21,7 +21,7 @@
 $width,
 $height {
     .svg--$(name)::before {
-        padding-top: 21.32075%;
+        padding-top: calc($height / $width * 100%);
     }
 }
 
