--- a/src/css/modules/slider.css
+++ b/src/css/modules/slider.css
@@ -17,12 +17,20 @@
 }
 
 .slider__items {
-  margin: 1rem -2rem;
+  margin: 4rem -2rem;
 
   @media (--md) {
     @mixin container;
 
     max-width: 58rem;
+  }
+
+  @media (--lg) {
+    margin: 4rem -2rem;
+    
+    & .flickity-viewport {
+      max-height: 350px;
+    }
   }
 
   & .card {
@@ -33,7 +41,7 @@
     background-color: var(--white);
 
     @nest .flickity-resize& {
-      max-height: 100%;
+      min-height: 100%;
     }
   }
 
@@ -51,7 +59,6 @@
   & .flickity-viewport {
     position: relative;
     height: 100%;
-    max-height: 350px;
   }
 
   & .flickity-slider {
