Change container max width and testimonial padding

--- a/src/css/modules/testimonial.css
+++ b/src/css/modules/testimonial.css
@@ -10,14 +10,14 @@
   color: var(--white);
 
   @media (--md) {
-    padding: 5rem 4rem;
+    padding: 4rem;
   }
 }
 
 .testimonial__container {
   @mixin container;
 
-  max-width: 52rem;
+  max-width: 60rem;
   padding: 0;
 
   @media (--lg) {
