--- a/src/css/modules/slider.css
+++ b/src/css/modules/slider.css
@@ -39,6 +39,7 @@
     max-width: 100%;
     margin: 0 1rem;
     background-color: var(--white);
+    height: 100%;
 
     @nest .flickity-resize& {
       min-height: 100%;
