Navigation becomes visible if user is using keyboard to navigate through page

--- a/src/css/modules/fixed-cta.css
+++ b/src/css/modules/fixed-cta.css
@@ -13,6 +13,11 @@
     bottom: -4.875rem;
     height: 4.875rem;
   }
+
+  &.focus-within {
+     transform: translate3d(0, -100%, 0);
+     box-shadow: var(--box-shadow);
+   }
 }
 
 .fixed-cta--active {
