Add event listener for tabs for mobile menu behavior

--- a/src/css/modules/header.css
+++ b/src/css/modules/header.css
@@ -38,7 +38,8 @@
             background-color: var(--white);
         }
     }
-    @nest .scrolling-up &, &.focus-within {
+    @nest .scrolling-up &,
+    &.focus-within {
         transform: translate3d(0, 100%, 0);
         box-shadow: var(--box-shadow);
         @media (--lg) {
